--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,8 +33,18 @@ android {
 }
 
 dependencies {
-
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
+    // picasso support
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+
+    // coroutines support
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2"
+
+    // GSON support
+    implementation "com.google.code.gson:gson:2.8.9"
+
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
